samples/error/data_race.plis
const8 r0, label
start t1, r0
move r2, r1
end
label:
move r3, r2
exit
